# ansi256-colors

./: .gitignore  README.md  ansi256.py  pyproject.toml  setup.py
src/ansi256/: __init__.py  ansi256.py
